fixed overflow

--- a/assets/css/langley.css
+++ b/assets/css/langley.css
@@ -58,12 +58,14 @@
   --margin-mobile: calc(1rem + ((1vw - 3.75px) * 10)); /* calculated to be dynamic starting at iPhone SE screen */
   --margin-desktop: 4rem;
   --gutter: 2rem;
-  --border-radius: 4px;
+  --border-radius: 4px; /* from MS Fluent UI for small items  */
+  --border-radius-large: 8px; /* from MS Fluent UI for large items  */
   --box-shadow-4: 0 1.6px 3.6px 0 rgba(0, 0, 0, 0.132), 0 0.3px 0.9px 0 rgba(0, 0, 0, 0.108); /* from ms-depth-4 */
   --box-shadow-8: 0 3.2px 7.2px 0 rgba(0, 0, 0, 0.132), 0 0.6px 1.8px 0 rgba(0, 0, 0, 0.108); ; /* from ms-depth-8 */
 }
 
 html, body {
+  overflow-x: hidden;
   background-color: var(--neutralLight);
 }
 
@@ -90,10 +92,7 @@ main {
   max-width: var(--body-width);
   padding: var(--margin-mobile);
   box-shadow: var(--box-shadow-8);
-}
-
-main > * {
-  overflow: hidden;
+  border-radius: var(--border-radius-large);
 }
 
 /* Hide desktop-only elements*/
